@@ -3,6 +3,8 @@ ChangeLog for Nicotine Plus
 Unreleased
 
 GENERAL CHANGES
+ * Comments in Buddy List can now be edited in-list by clicking twice on the 
+   comment column, not by double-clicking (which would open Private Chat).
  * Added an Import Config frame to Settings, which duplicates the functionality
    of nicotine-import-winconfig. User can now easily import config options
    from the official Windows Soulseek client's config directory. Support for importing
